# LB-analysis-framework

./: .env  .gitignore  .pylintrc  DESCRIPTION.rst  LICENSE  README.md  before_starting.html  classes.html  configuration.html  dependencies.html  docker-compose.yml  index.html  input_data.html  json_data_files_validator.html  lbaf.Dockerfile  lbaf.deps.Dockerfile  modules.html  pages.html  requirements-3.8.txt  requirements-3.9.txt  requirements.txt  searchdata-v2.js  setup.cfg  src.lbaf.Applications.LBAF_app.LBAFApp.html  src.lbaf.Applications.LBAF_app.html  src.lbaf.Applications.LBAF_app.internalParameters.html  src.lbaf.Execution.lbsAlgorithmBase.AlgorithmBase.html  src.lbaf.Execution.lbsAlgorithmBase.html  src.lbaf.Execution.lbsBruteForceAlgorithm.BruteForceAlgorithm.html  src.lbaf.Execution.lbsBruteForceAlgorithm.html  src.lbaf.Execution.lbsCriterionBase.CriterionBase.html  src.lbaf.Execution.lbsCriterionBase.html  src.lbaf.Execution.lbsInformAndTransferAlgorithm.InformAndTransferAlgorithm.html  src.lbaf.Execution.lbsInformAndTransferAlgorithm.html  src.lbaf.Execution.lbsPhaseStepperAlgorithm.PhaseStepperAlgorithm.html  src.lbaf.Execution.lbsPhaseStepperAlgorithm.html  src.lbaf.Execution.lbsRuntime.Runtime.html  src.lbaf.Execution.lbsRuntime.html  src.lbaf.Execution.lbsStrictLocalizingCriterion.StrictLocalizingCriterion.html  src.lbaf.Execution.lbsStrictLocalizingCriterion.html  (+47 more)
.github/: run_pylint.py
.github/workflows/: acceptance-tests.yml  build-and-publish-to-pypi.yml  build-docker-image.yml  check-commit-format.yml  check-pr-fixes-issue.yml  ci-workflow.yml  code-analysis.yaml  code-quality.yml  deploy_docs.yml  find-trailing-whitespace.yml  find-unsigned-commits.yml  package-installation.yml  unit-tests.yml
Applications/: NodeGossiper.py  NodeGossiper.py~
Execution/: lbsRuntime.py
IO/: lbsGridStreamer.py  lbsLoadWriter.py  lbsStatistics.py
Model/: lbsEpoch.py  lbsMessage.py  lbsProcessor.py
ci/docker/: entrypoint.sh  lbaf.Dockerfile
config/: ccm-example.yaml  challenging-toy-fewer-tasks.yaml  challenging-toy-hundreds-tasks.yaml  conf.yaml  every20phases.yaml  global.yaml  nolb-8color-16nodes.yaml  permute.yaml  step.yaml  synthetic-blocks.yaml  test-vt-tv.yaml  toy-9objects-4ranks.yaml  update-config-script.py  user-defined-memory-toy-problem.yaml  work-stealing.yaml
config/acceptance_tests/: conf.yaml  step.yaml
data/: NodeGossiper-n4096-p16-o10000-uniform-i10-k2-f6-t1_0.e  NodeGossiper-n4096-p16-o10000-uniform-i2-k10-f6-t1_0.e
data/4color-4node-data/: data.0.json  data.1.json  data.10.json  data.11.json  data.12.json  data.13.json  data.14.json  data.15.json  data.2.json  data.3.json  data.4.json  data.5.json  data.6.json  data.7.json  data.8.json  data.9.json
data/8color-4node-data/: data.0.json  data.1.json  data.10.json  data.11.json  data.12.json  data.13.json  data.14.json  data.15.json  data.2.json  data.3.json  data.4.json  data.5.json  data.6.json  data.7.json  data.8.json  data.9.json
data/ccm_example/: ccm_example.yaml  data.0.json  data.1.json
data/ccm_example_data/: data.1.json
data/challenging_toy_fewer_tasks/: toy.0.json  toy.1.json  toy.10.json  toy.11.json  toy.12.json  toy.13.json  toy.14.json  toy.15.json  toy.2.json  toy.3.json  toy.4.json  toy.5.json  toy.6.json  toy.7.json  toy.8.json  toy.9.json
data/challenging_toy_hundreds_tasks/: toy.0.json  toy.1.json  toy.10.json  toy.11.json  toy.12.json  toy.13.json  toy.14.json  toy.15.json  toy.16.json  toy.17.json  toy.18.json  toy.19.json  toy.2.json  toy.20.json  toy.21.json  toy.22.json  toy.23.json  toy.24.json  toy.25.json  toy.26.json  toy.27.json  toy.28.json  toy.29.json  toy.3.json  toy.30.json  toy.31.json  toy.32.json  toy.33.json  toy.34.json  toy.35.json  toy.36.json  toy.37.json  toy.38.json  toy.39.json  toy.4.json  toy.40.json  toy.41.json  toy.42.json  toy.43.json  toy.44.json  (+24 more)
data/challenging_toy_thousands_tasks/: toy.0.json  toy.1.json  toy.10.json  toy.100.json  (+252 more)
docs/: docs_config.py
scripts/: add-license-perl.pl  check_license.sh  compress.py  copy_dataset.py  entrypoint.sh  license-template  multi_reg.py  multi_reg_and_predict_new_data.py  multi_reg_and_predict_on_training_data.py  run_tests.sh  test_imports.py  test_lbaf.py  test_stepper.py  update-viz-config.py  upgrade_configuration.py
tests/: functions.py  test_JSON_data_files_validator.py  test_configuration_validator.py  test_lbs_inform_and_transfer_algorithm.py  test_lbs_message.py  test_lbs_object.py  test_lbs_object_communicator.py  test_lbs_phase.py  test_lbs_rank.py  test_lbs_vt_data_reader.py  test_lbs_vt_statistics_reader.py  test_lbs_work_model_base.py  test_lsb_phase.py  test_schema_validator.py  test_tmp_377_failure.py  test_vt_data_extractor.py  test_vt_writer.py
utils/: csv_2_json_data_converter.py  logger.py
(+791 files in other folders)
