[metadata]
name = lbaf
version = attr: lbaf.__version__
author = J. Lifflander, P. P. Pébaÿ, M. Wróbel
author_email = jliffla@sandia.gov
description = Analysis framework for exploring, testing, and comparing load balancing strategies
long_description = file: DESCRIPTION.rst
long_description_content_type = text/x-rst
url = https://github.com/DARMA-tasking/LB-analysis-framework
project_urls =
    Bug Tracker = https://github.com/DARMA-tasking/LB-analysis-framework/issues
keywords=HPC, concurrency, distributed-computing, parallelism, load-balancing
classifiers =
    Programming Language :: Python :: 3.8 :: Only
    License :: OSI Approved :: Modified BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Development Status :: 4 - Beta

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.8,<=3.10
install_requires =
    vtk == 9.0.1;python_version=='3.8'
    vtk == 9.1.0;python_version=='3.9'
    numpy == 1.22.3
    PyYAML == 6.0
    Brotli == 1.0.9
    schema == 0.7.5
    scikit-learn == 1.0.2
    colorama == 0.4.6
    matplotlib==3.5.3;python_version=='3.8'
    matplotlib==3.6.2;python_version=='3.9'

[options.package_data]
* = *.yaml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lbaf = lbaf:run
    lbaf-vt-data-extractor = lbaf:vt_data_extractor
    lbaf-vt-data-validator-loader = lbaf:vt_data_validator_loader
    lbaf-vt-data-converter = lbaf:vt_data_converter
    lbaf-move-counts-viewer = lbaf:move_counts_viewer
    