[metadata]
name = lbaf
version = attr: lbaf.__version__
author = P. P. Pébaÿ
author_email = philippe.pebay@ng-analytics.com
description = Analysis framework for exploring, testing, and comparing load balancing strategies
long_description = file: DESCRIPTION.rst
long_description_content_type = text/x-rst
license_files = LICENSE
url = https://github.com/DARMA-tasking/LB-analysis-framework
project_urls =
    Bug Tracker = https://github.com/DARMA-tasking/LB-analysis-framework/issues
keywords=HPC, concurrency, distributed-computing, parallelism, load-balancing
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Development Status :: 5 - Production/Stable

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy==1.24
    PyYAML==6.0.1
    Brotli==1.1.0
    schema==0.7.7
    colorama==0.4.6

[options.package_data]
* = *.yaml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    # Applications
    lbaf = lbaf:run
    lbaf-move-counts-viewer = lbaf:move_counts_viewer
    # Utils
    lbaf-csv-2-json-converter = lbaf:csv_2_json_converter
    lbaf-vt-data-extractor = lbaf:vt_data_extractor
    lbaf-vt-data-files-validator-loader = lbaf:vt_data_files_validator_loader
    lbaf-vt-data-files-validator = lbaf:vt_data_files_validator
    lbaf-vt-data-stat-files-updater = lbaf:vt_data_stat_files_updater
